--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,6 +11,15 @@ body {
   overflow-x: hidden;
 }
 
+/* AJO In-App Styles */
+div#alloy-messaging-container {
+  background-color: rgb(0, 0, 0, 0) !important;
+}
+
+div#alloy-overlay-container {
+  display: none;
+}
+
 .layout_padding {
   padding: 70px 0;
 }
