Build html files.

--- a/src/partials/head.handlebars
+++ b/src/partials/head.handlebars
@@ -22,6 +22,7 @@
   <link rel="preconnect" href="https://assets.adobedtm.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link rel="preconnect" href="https://experienceedgeearlya.tt.omtrdc.net" />
+  <link rel="preconnect" href="https://edge.adobedc.net" />
   <script>
     window.digitalData = {{json digitalData }};
   </script>
