--- a/src/index.handlebars
+++ b/src/index.handlebars
@@ -9,7 +9,7 @@
     <!-- slider section -->
     <section class="slider_section ">
       <div class="slider_bg_box">
-        <img src="images/slider-bg.jpg" alt="">
+        <img src="images/slider-bg.jpg" loading="lazy" alt="">
       </div>
       <div id="customCarousel1" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
@@ -69,7 +69,7 @@
               </div>
             </div>
             <div class="img-box">
-              <img src="images/p1.png" alt="">
+              <img src="images/p1.png" loading="lazy" alt="">
             </div>
             <div class="detail-box">
               <h5>
@@ -94,7 +94,7 @@
               </div>
             </div>
             <div class="img-box">
-              <img src="images/p2.png" alt="">
+              <img src="images/p2.png" loading="lazy" alt="">
             </div>
             <div class="detail-box">
               <h5>
@@ -119,7 +119,7 @@
               </div>
             </div>
             <div class="img-box">
-              <img src="images/p3.png" alt="">
+              <img src="images/p3.png" loading="lazy" alt="">
             </div>
             <div class="detail-box">
               <h5>
@@ -144,7 +144,7 @@
               </div>
             </div>
             <div class="img-box">
-              <img src="images/p4.png" alt="">
+              <img src="images/p4.png" loading="lazy" alt="">
             </div>
             <div class="detail-box">
               <h5>
@@ -169,7 +169,7 @@
               </div>
             </div>
             <div class="img-box">
-              <img src="images/p5.png" alt="">
+              <img src="images/p5.png" loading="lazy" alt="">
             </div>
             <div class="detail-box">
               <h5>
@@ -194,7 +194,7 @@
               </div>
             </div>
             <div class="img-box">
-              <img src="images/p6.png" alt="">
+              <img src="images/p6.png" loading="lazy" alt="">
             </div>
             <div class="detail-box">
               <h5>
@@ -240,6 +240,7 @@
     </div>
   </section>
   <!-- end subscribe section -->
+  
   <!-- client section -->
   <section class="client_section layout_padding">
     <div class="container">
@@ -255,55 +256,7 @@
               <div class="img_container">
                 <div class="img-box">
                   <div class="img_box-inner">
-                    <img src="images/client.jpg" alt="">
-                  </div>
-                </div>
-              </div>
-              <div class="detail-box">
-                <h5>
-                  Anna Trevor
-                </h5>
-                <h6>
-                  Customer
-                </h6>
-                <p>
-                  Dignissimos reprehenderit repellendus nobis error quibusdam? Atque animi sint unde quis reprehenderit,
-                  et, perspiciatis, debitis totam est deserunt eius officiis ipsum ducimus ad labore modi voluptatibus
-                  accusantium sapiente nam! Quaerat.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="box col-lg-10 mx-auto">
-              <div class="img_container">
-                <div class="img-box">
-                  <div class="img_box-inner">
-                    <img src="images/client.jpg" alt="">
-                  </div>
-                </div>
-              </div>
-              <div class="detail-box">
-                <h5>
-                  Anna Trevor
-                </h5>
-                <h6>
-                  Customer
-                </h6>
-                <p>
-                  Dignissimos reprehenderit repellendus nobis error quibusdam? Atque animi sint unde quis reprehenderit,
-                  et, perspiciatis, debitis totam est deserunt eius officiis ipsum ducimus ad labore modi voluptatibus
-                  accusantium sapiente nam! Quaerat.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="box col-lg-10 mx-auto">
-              <div class="img_container">
-                <div class="img-box">
-                  <div class="img_box-inner">
-                    <img src="images/client.jpg" alt="">
+                    <img src="images/client.jpg" loading="lazy" alt="">
                   </div>
                 </div>
               </div>
@@ -337,6 +290,7 @@
     </div>
   </section>
   <!-- end client section -->
+  
   <!-- footer start -->
   <footer>
     <div class="container">
