--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -433,7 +433,7 @@ a:focus {
     align-items: center;
 
 
-    a {
+    a, button {
       display: inline-block;
       padding: 8px 15px;
       border-radius: 30px;
