--- a/src/partials/product_cards.handlebars
+++ b/src/partials/product_cards.handlebars
@@ -16,9 +16,9 @@
               </a>
               {{/if}}
               {{#if ../addToCart}}
-              <a href="#" class="addToCart" data-product-index="{{@index}}">
+              <button class="addToCart" data-product-index="{{@index}}">
                 Add to Cart
-              </a>
+              </button>
               {{/if}}
             </div>
           </div>
