--- a/src/index.handlebars
+++ b/src/index.handlebars
@@ -25,11 +25,6 @@
                       <br>
                       On Everything
                     </h1>
-                    <p>
-                      Explicabo esse amet tempora quibusdam laudantium, laborum eaque magnam fugiat hic? Esse dicta
-                      aliquid error repudiandae earum suscipit fugiat molestias, veniam, vel architecto veritatis
-                      delectus repellat modi impedit sequi.
-                    </p>
                     <div class="btn-box">
                       <a href="/categories/all.html" class="btn1">
                         Shop Now
@@ -51,162 +46,13 @@
   <section class="product_section layout_padding">
     <div class="container">
       <div class="heading_container heading_center">
-        <h2>
-          Our <span>products</span>
-        </h2>
+        <h3>
+          Our products
+        </h3>
       </div>
-      <div class="row">
-        <div class="col-sm-6 col-md-4 col-lg-4">
-          <div class="box">
-            <div class="option_container">
-              <div class="options">
-                <a href="" class="option1">
-                  Men's Shirt
-                </a>
-                <a href="" class="option2">
-                  Buy Now
-                </a>
-              </div>
-            </div>
-            <div class="img-box">
-              <img src="images/p1.png" loading="lazy" alt="">
-            </div>
-            <div class="detail-box">
-              <h5>
-                Men's Shirt
-              </h5>
-              <h6>
-                $75
-              </h6>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-4">
-          <div class="box">
-            <div class="option_container">
-              <div class="options">
-                <a href="" class="option1">
-                  Add To Cart
-                </a>
-                <a href="" class="option2">
-                  Buy Now
-                </a>
-              </div>
-            </div>
-            <div class="img-box">
-              <img src="images/p2.png" loading="lazy" alt="">
-            </div>
-            <div class="detail-box">
-              <h5>
-                Men's Shirt
-              </h5>
-              <h6>
-                $80
-              </h6>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-4">
-          <div class="box">
-            <div class="option_container">
-              <div class="options">
-                <a href="" class="option1">
-                  Add To Cart
-                </a>
-                <a href="" class="option2">
-                  Buy Now
-                </a>
-              </div>
-            </div>
-            <div class="img-box">
-              <img src="images/p3.png" loading="lazy" alt="">
-            </div>
-            <div class="detail-box">
-              <h5>
-                Women's Dress
-              </h5>
-              <h6>
-                $68
-              </h6>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-4">
-          <div class="box">
-            <div class="option_container">
-              <div class="options">
-                <a href="" class="option1">
-                  Add To Cart
-                </a>
-                <a href="" class="option2">
-                  Buy Now
-                </a>
-              </div>
-            </div>
-            <div class="img-box">
-              <img src="images/p4.png" loading="lazy" alt="">
-            </div>
-            <div class="detail-box">
-              <h5>
-                Women's Dress
-              </h5>
-              <h6>
-                $70
-              </h6>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-4">
-          <div class="box">
-            <div class="option_container">
-              <div class="options">
-                <a href="" class="option1">
-                  Add To Cart
-                </a>
-                <a href="" class="option2">
-                  Buy Now
-                </a>
-              </div>
-            </div>
-            <div class="img-box">
-              <img src="images/p5.png" loading="lazy" alt="">
-            </div>
-            <div class="detail-box">
-              <h5>
-                Women's Dress
-              </h5>
-              <h6>
-                $75
-              </h6>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-4">
-          <div class="box">
-            <div class="option_container">
-              <div class="options">
-                <a href="" class="option1">
-                  Add To Cart
-                </a>
-                <a href="" class="option2">
-                  Buy Now
-                </a>
-              </div>
-            </div>
-            <div class="img-box">
-              <img src="images/p6.png" loading="lazy" alt="">
-            </div>
-            <div class="detail-box">
-              <h5>
-                Women's Dress
-              </h5>
-              <h6>
-                $58
-              </h6>
-            </div>
-          </div>
-        </div>
-      </div>
+      
+      {{> product_cards products=products title=title details=details addToCart=addToCart}}
+
       <div class="btn-box">
         <a href="/categories/all.html">
           View All products
@@ -226,7 +72,6 @@
               <div class="heading_container heading_center">
                 <h3>Subscribe To Get Discount Offers</h3>
               </div>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
               <form action="">
                 <input type="email" placeholder="Enter your email">
                 <button>
@@ -267,11 +112,6 @@
                 <h6>
                   Customer
                 </h6>
-                <p>
-                  Dignissimos reprehenderit repellendus nobis error quibusdam? Atque animi sint unde quis reprehenderit,
-                  et, perspiciatis, debitis totam est deserunt eius officiis ipsum ducimus ad labore modi voluptatibus
-                  accusantium sapiente nam! Quaerat.
-                </p>
               </div>
             </div>
           </div>
