--- a/src/partials/nav.handlebars
+++ b/src/partials/nav.handlebars
@@ -31,7 +31,7 @@
             </ul>
           </li>
           <li class="nav-item{{addClass (eq active 'products') 'active'}}">
-            <a class="nav-link" href="/product.html">Products</a>
+            <a class="nav-link" href="/categories/all.html">Products</a>
           </li>
           <li class="nav-item{{addClass (eq active 'blog') 'active'}}">
             <a class="nav-link" href="/blog_list.html">Blog</a>
