Add clear button for assurance session

--- a/src/partials/nav.handlebars
+++ b/src/partials/nav.handlebars
@@ -14,6 +14,7 @@
         <label for="assuranceSession">Assurance session ID</label>
         <input type="text" class="form-control" id="assuranceSession" placeholder="Enter Adobe Assurance session ID" />
       </div>
+      <button id="assuranceSessionClear" class="btn btn-secondary">Clear</button>
       <button id="assuranceSessionSubmit" class="btn btn-primary">Save</button>
     </form>
   </div>
