--- a/src/index.handlebars
+++ b/src/index.handlebars
@@ -50,7 +50,7 @@
           Our products
         </h3>
       </div>
-      
+
       {{> product_cards products=products title=title details=details addToCart=addToCart}}
 
       <div class="btn-box">
@@ -85,7 +85,7 @@
     </div>
   </section>
   <!-- end subscribe section -->
-  
+
   <!-- client section -->
   <section class="client_section layout_padding">
     <div class="container">
@@ -130,7 +130,7 @@
     </div>
   </section>
   <!-- end client section -->
-  
+
   <!-- footer start -->
   <footer>
     <div class="container">
@@ -168,8 +168,8 @@
                   <div class="widget_menu">
                     <h3>Account</h3>
                     <ul>
-                      <li><a href="#">Account</a></li>
-                      <li><a href="#">Checkout</a></li>
+                      <li><a href="/workbook.pdf" download>Workbook</a></li>
+                      <li><a href="/copy.html" target="_blank">Copy &amp; Paste</a></li>
                       <li><a href="#">Login</a></li>
                       <li><a href="#">Register</a></li>
                       <li><a href="#">Shopping</a></li>
